compiling_error.txt
/Users/NoBey/c/q.c:19:2: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
 PrintN = {
 ^
/Users/NoBey/c/q.c:19:2: error: redefinition of 'PrintN' as different kind of symbol
/Users/NoBey/c/q.c:7:6: note: previous definition is here
void PrintN( int N );
     ^
/Users/NoBey/c/q.c:20:3: error: expected expression
  for (int i = 1; i <= N; i++) {
  ^
1 warning and 2 errors generated.
